# FleetLM

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.claude/skills/measure/: SKILL.md
.claude/skills/run-fleet/: SKILL.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
assets/: fleetlm-architecture.excalidraw  fleetlm-flow.excalidraw
benchmarks/: 2026-07-19-churn-smoke.md
node_agent/: __main__.py  cli.py  engine.py
node_agent/engine/: llama.py
orchestrator/: batch.py  config.py  main.py  metrics.py  protocol.py  session.py  verification.py
orchestrator/api/: batches.py  completions.py  nodes.py
orchestrator/batch/: store.py
orchestrator/fleet/: heartbeat.py  registry.py  router.py
orchestrator/node_manager/: assigner.py  heartbeat.py  registry.py
orchestrator/protocol/: messages.py
orchestrator/scheduler/: router.py
orchestrator/session/: manager.py
tests/: test_batch_flow.py  test_batch_store.py  test_bench_metrics.py  test_cli_batch.py  test_fleet_registry.py  test_generation_flow.py  test_metrics_and_cli.py  test_model_matching.py  test_node_batching.py  test_node_prefetch.py  test_node_protocol.py  test_node_wiring.py  test_ollama_engine.py  test_orchestrator.py  test_session.py  test_verification.py
web_compute/static/css/: main.css
web_compute/static/js/: compute.js  dashboard.js
web_compute/templates/: compute.html  dashboard.html
