[project]
name = "distributed-llm"
version = "0.1.0"
description = "Distributed LLM inference platform via browser WebGPU compute"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "numpy>=1.26",
    "httpx>=0.27",
    "psutil>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
inference = [
    "llama-cpp-python>=0.3",
]
mlx = [
    "mlx-lm>=0.21; platform_machine == 'arm64' and sys_platform == 'darwin'",
]

[tool.setuptools.packages.find]
include = ["orchestrator*", "node_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
